# Interpretooor

./: .gitignore  .vercelignore  CLAUDE.md  README.md  kvault_idl.json  next.config.ts  package-lock.json  package.json  tsconfig.json
anchor/: Anchor.toml
anchor/programs/bounty/: Cargo.toml
anchor/programs/bounty/src/: lib.rs
app/: client-providers.tsx  code.html  globals.css  layout.tsx  page.tsx  providers.tsx
app/api/auto-translate/: route.ts
app/api/corrections/: route.ts
app/api/drafts/: route.ts
app/api/interpret/: route.ts
app/api/upload-image/: route.ts
app/app/: layout.tsx  page.tsx
app/app/dashboard/: page.tsx
app/components/: AppFooter.tsx  AppNav.tsx  ConnectWalletButton.tsx  MdhRenderer.tsx  Navigation.tsx  SmoothScroll.tsx
app/pages/: CreateBounty.tsx  Dashboard.tsx  Home.tsx  Reader.tsx  Verification.tsx  Write.tsx
app/services/: geminiService.ts  openaiService.ts
backend/crank/: index.ts  package-lock.json  package.json  tsconfig.json
backend/irys-relayer/: index.ts  package-lock.json  package.json  railway.json  tsconfig.json
docs/architecture/: architecture-diagram.md
docs/specs/: mdh-utils-spec.md
hooks/: useArticle.ts  useBounty.ts  useDraftPersistence.ts  useHomeFeed.ts  useMyArticles.ts  usePublish.ts  useSidebarData.ts  useValidator.ts  useWorkspaceTranslation.ts
lib/: mdh-block-parser.ts  mdh-lexical-bridge.ts  mdh-utils.ts
lib/__tests__/: mdh-utils.test.ts
lib/ai/: gemini-interpreter.ts  memory-store.ts  openai-interpreter.ts
lib/idl/: translation_bounty.json
lib/solana/: privy-adapter.ts
(+29 files in other folders)
