[package]
name = "bounty"
version = "0.1.0"
description = "Translation bounty escrow program with 48-hour optimistic review window"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bounty"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token"] }
